// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Flex Flex 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex IE11 minHeight solution 1 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  height: 400px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      height="400px"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
    <p
      className="c2"
      color="currentColor"
      disabled={false}
      fontSize="medium"
    >
      This solution involves using height instead min-height.
    </p>
  </div>
</div>
`;

exports[`Storyshots Flex IE11 minHeight solution 2 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={
          Object {
            "background": "#f0f2f5",
            "boxSizing": "content-box",
            "minHeight": "400px",
            "padding": "24px",
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          1
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          2
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          3
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          4
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          5
        </div>
      </div>
    </div>
    <p
      className="c3"
      color="currentColor"
      disabled={false}
      fontSize="medium"
    >
      This solution involves wrapping Flex element with another Flex element with column direction..
    </p>
  </div>
</div>
`;

exports[`Storyshots Flex With custom order 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c2 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c5 {
  -webkit-order: 5;
  -ms-flex-order: 5;
  order: 5;
}

.c6 {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c2"
        order="1"
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className="c3"
        order="3"
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className="c4"
        order="2"
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className="c5"
        order="5"
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className="c6"
        order="4"
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to center 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to flex-end 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to flex-start 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to stretch (default) 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to column 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to column-reverse 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to row-reverse 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to no-wrap (default) 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  width: 500px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      width={500}
    >
      <div
        className="c2"
        style={
          Object {
            "background": "#f0f2f5",
            "boxSizing": "content-box",
            "minHeight": "400px",
            "padding": "24px",
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          1
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          2
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          3
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          4
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          5
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          6
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to wrap 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  width: 500px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      width={500}
    >
      <div
        className="c2"
        style={
          Object {
            "background": "#f0f2f5",
            "boxSizing": "content-box",
            "minHeight": "400px",
            "padding": "24px",
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          1
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          2
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          3
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          4
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          5
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          6
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to wrap-reverse 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  width: 500px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      width={500}
    >
      <div
        className="c2"
        style={
          Object {
            "background": "#f0f2f5",
            "boxSizing": "content-box",
            "minHeight": "400px",
            "padding": "24px",
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          1
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          2
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          3
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          4
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          5
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          6
        </div>
        <div
          className=""
          style={
            Object {
              "background": "#c0c8d1",
              "outline": "2px dotted #434d59",
              "padding": "48px",
            }
          }
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to center 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to flex-end 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to flex-start (default) 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-around 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-between 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-evenly 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "background": "#f0f2f5",
          "boxSizing": "content-box",
          "minHeight": "400px",
          "padding": "24px",
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        1
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        2
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        3
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        4
      </div>
      <div
        className=""
        style={
          Object {
            "background": "#c0c8d1",
            "outline": "2px dotted #434d59",
            "padding": "48px",
          }
        }
      >
        5
      </div>
    </div>
  </div>
</div>
`;
